# presure

./: README.md
client_demo/: LoginAuthMessage.pb.cpp  LoginAuthMessage.pb.h  LoginAuthTask.cpp  LoginAuthTask.h  aes_crypt.cpp  aes_crypt.h  client.cpp  client.h  comm.cpp  comm.h  makefile  my_config.cpp  my_config.h  my_utility.cpp  my_utility.h  rsa_encrypt.cpp  rsa_encrypt.h  test.cpp  test_common.cpp  test_common.h  win_exit.h
client_demo/conf/: ._rsa_public_key_2048.pem  rsa_private_key_2048.pem  rsa_private_key_2048_pkcs8.pem  user.conf
client_demo/proto/: LoginAuthMessage.proto
client_demo/public/: client_cmd.h  tx_define.h
encrypt/: openssl_linux_install.txt
encrypt/java_encrypt/: readme.txt
encrypt/java_encrypt/imtest/: pom.xml
encrypt/java_encrypt/openssl/: rsa2048.cpp  新建文本文档.txt
end_end_encrypt/imtest/: pom.xml
end_end_encrypt/imtest/src/main/java/com/im/group/: GroupPretypeMsgProtobuf.java  GroupSenderKeyDistributionMessage.java  UserKey.java
end_end_encrypt/imtest/src/main/java/com/im/secure/: Aes256.java  CRC32Util.java  GroupPretypeMsgProtobuf.java  HexUtil.java  ProvisioningCipher.java  RSAEncrypt.java  SimultaneousInitiateTests.java  SinglePreKeyMessageProtobuf.java  TestInMemoryIdentityKeyStore.java  signal.java  signalbase64.java  signaltest.java
end_end_encrypt/imtest/src/main/java/com/im/single/: AesGcm256.java  (+18 more)
uvclient/: CMakeLists.txt  comm.cpp  comm.h  connect.cpp  connect.h  presureClient.cpp  presureResult.sh  testPbFromMongo.cpp0708
uvclient/buffer/: CMakeLists.txt  CircleBuffer.hpp  readme.txt  ring_buffer.cpp  test.cpp
uvclient/conf/: client.conf
uvclient/conf/rsakey/: public_key.pem  public_key.pem0616
uvclient/data/: id_test_10k.json  id_test_20k.json  productTestData.cpp
uvclient/data/32/: ins_redis_data.sh  set_0_redis_data.sh  set_0_redis_data.txt.af
uvclient/docs/: readme.txt  uvclient.docx
uvclient/encrypt/: CMakeLists.txt  aes_crypt.cpp  aes_crypt.h  client.cpp  client.h  comm.cpp  comm.h  encrypt_crypto.cpp  encrypt_crypto.h  readme.txt  rsa_encrypt.cpp  rsa_encrypt.h  test.cpp  test_common.cpp  test_common.h  tx_define.h
uvclient/json/: CJsonObject.cpp  CJsonObject.hpp  CMakeLists.txt  cJSON.c  cJSON.h
uvclient/lib/: buildlink.sh  liblog4cplus-1.2.so.5.1.6  libuv.so.1
uvclient/logger/: CMakeLists.txt  logger.cpp  logger.h
uvclient/pack/: CMakeLists.txt  ImMessagePack.cpp  ImMessagePack.h  event.cpp  event.h  pack.cpp  pack.h
uvclient/pb/: CMakeLists.txt  ImCw.h  ImError.h  client.pb.cc  client.pb.h  common.pb.cc  common.pb.h  login.pb.cc  login.pb.h  msg.pb.cc  msg.pb.h
uvclient/unix/: CMakeLists.txt  process_helper.c  process_helper.h  proctitle_helper.c
(+24 files in other folders)
